adjusted documentation to make board response better, working boardController code and tests, most of TaskServiceTests initial written
